# employee/endpoint.go
@@ -49,6 +49,14 @@ type deleteEmployeeRequest struct {
 	EmployeeID string
 }
 
+// @Summary Lista de Empleados
+// @Tags Employee
+// @Accept json
+// @Produce  json
+// @Param request body employee.getEmployeesRequest true "User Data"
+// @Success 200 {object} employee.EmployeeList "ok"
+// @Router /employees/paginated [post]
+
 func makeGetEmployeesEndpoint(s Service) endpoint.Endpoint {
 	getEmployeesEndpoint := func(ctx context.Context, request interface{}) (response interface{}, err error) {
 		req := request.(getEmployeesRequest)
@@ -59,6 +67,13 @@ func makeGetEmployeesEndpoint(s Service) endpoint.Endpoint {
 	return getEmployeesEndpoint
 }
 
+// @Summary Empleado by Id
+// @Tags Employee
+// @Accept json
+// @Produce  json
+// @Param id path int true "Employee Id"
+// @Success 200 {object} employee.Employee "ok"
+// @Router /employees/{id} [get]
 func makeEmployeeByIDEndpoint(s Service) endpoint.Endpoint {
 	getEmployeeByIDRequest := func(ctx context.Context, request interface{}) (response interface{}, err error) {
 		req := request.(getEmployeeByIDRequest)
@@ -69,6 +84,12 @@ func makeEmployeeByIDEndpoint(s Service) endpoint.Endpoint {
 	return getEmployeeByIDRequest
 }
 
+// @Summary Mejor Empleado
+// @Tags Employee
+// @Accept json
+// @Produce  json
+// @Success 200 {object} employee.BestEmployee "ok"
+// @Router /employees/best [get]
 func makeGetBestEmployeeEndpoint(s Service) endpoint.Endpoint {
 	getBestEmployeeEndpoint := func(_ context.Context, request interface{}) (response interface{}, err error) {
 		result, err := s.GetBestEmployee()
@@ -79,6 +100,13 @@ func makeGetBestEmployeeEndpoint(s Service) endpoint.Endpoint {
 
 }
 
+// @Summary Insertar Empleado
+// @Tags Employee
+// @Accept json
+// @Produce  json
+// @Param request body employee.addEmployeeRequest true "User Data"
+// @Success 200 {integer} int "ok"
+// @Router /employees/ [post]
 func makeInsertEmployeeEndpoint(s Service) endpoint.Endpoint {
 	getEmployeeEndpoint := func(_ context.Context, request interface{}) (response interface{}, err error) {
 		req := request.(addEmployeeRequest)
@@ -89,6 +117,13 @@ func makeInsertEmployeeEndpoint(s Service) endpoint.Endpoint {
 	return getEmployeeEndpoint
 }
 
+// @Summary Update Empleado
+// @Tags Employee
+// @Accept json
+// @Produce  json
+// @Param request body employee.updateEmployeeRequest true "User Data"
+// @Success 200 {integer} int "ok"
+// @Router /employees/ [put]
 func makeUpadateEmployeeEndpoint(s Service) endpoint.Endpoint {
 	getUpdateEmployeeEndpoint := func(_ context.Context, request interface{}) (response interface{}, err error) {
 		req := request.(updateEmployeeRequest)
@@ -99,6 +134,13 @@ func makeUpadateEmployeeEndpoint(s Service) endpoint.Endpoint {
 	return getUpdateEmployeeEndpoint
 }
 
+// @Summary Eliminar Empleado
+// @Tags Employee
+// @Accept json
+// @Produce  json
+// @Param id path int true "Employee Id"
+// @Success 200 {integer} int "ok"
+// @Router /employees/{id} [delete]
 func makeDeleteEmployeeEndpoint(s Service) endpoint.Endpoint {
 	getDeleteEmployeeEndpoint := func(_ context.Context, request interface{}) (response interface{}, err error) {
 		req := request.(deleteEmployeeRequest)
