# product/endpoint.go
@@ -41,6 +41,14 @@ type deleteProductRequest struct {
 
 type getBestSellersRequest struct{}
 
+// @Summary Producto by Id
+// @Tags Producto
+// @Accept json
+// @Produce  json
+// @Param id path int true "Producto Id"
+// @Success 200 {object} product.Product "ok"
+// @Router /products/{id} [get]
+
 func makeGetProductByIdEndPoint(s Service) endpoint.Endpoint {
 	getProductByIdEndpoint := func(ctx context.Context, request interface{}) (interface{}, error) {
 		req := request.(getProductByIdRequest)
@@ -52,6 +60,13 @@ func makeGetProductByIdEndPoint(s Service) endpoint.Endpoint {
 	return getProductByIdEndpoint
 }
 
+// @Summary Lista de Productos
+// @Tags Producto
+// @Accept json
+// @Produce  json
+// @Param request body product.getProductsRequest true "User Data"
+// @Success 200 {object} product.ProductList "ok"
+// @Router /products/paginated [post]
 func makeGetProductsEndPoint(s Service) endpoint.Endpoint {
 	getProductsEndPoint := func(ctx context.Context, request interface{}) (interface{}, error) {
 		req := request.(getProductsRequest)
@@ -62,6 +77,13 @@ func makeGetProductsEndPoint(s Service) endpoint.Endpoint {
 	return getProductsEndPoint
 }
 
+// @Summary Insertar Productos
+// @Tags Producto
+// @Accept json
+// @Produce  json
+// @Param request body product.getAddProductRequest true "User Data"
+// @Success 200 {integer} int "ok"
+// @Router /products/ [post]
 func makeAddProductsEndPoint(s Service) endpoint.Endpoint {
 	addProductEndpoint := func(ctx context.Context, request interface{}) (interface{}, error) {
 		req := request.(getAddProductRequest)
@@ -72,6 +94,13 @@ func makeAddProductsEndPoint(s Service) endpoint.Endpoint {
 	return addProductEndpoint
 }
 
+// @Summary Update Producto
+// @Tags Producto
+// @Accept json
+// @Produce  json
+// @Param request body product.updateProductRequest true "User Data"
+// @Success 200 {integer} int "ok"
+// @Router /products/ [put]
 func makeUpdateProductEndPoint(s Service) endpoint.Endpoint {
 	updateProductEnpoint := func(ctx context.Context, request interface{}) (interface{}, error) {
 		req := request.(updateProductRequest)
@@ -82,6 +111,13 @@ func makeUpdateProductEndPoint(s Service) endpoint.Endpoint {
 	return updateProductEnpoint
 }
 
+// @Summary Eliminar Producto
+// @Tags Producto
+// @Accept json
+// @Produce  json
+// @Param id path int true "Producto Id"
+// @Success 200 {integer} int "ok"
+// @Router /products/{id} [delete]
 func makeDeleteProductEndPoint(s Service) endpoint.Endpoint {
 	deleteProductEndPoint := func(ctx context.Context, request interface{}) (interface{}, error) {
 		req := request.(deleteProductRequest)
@@ -92,6 +128,12 @@ func makeDeleteProductEndPoint(s Service) endpoint.Endpoint {
 	return deleteProductEndPoint
 }
 
+// @Summary Best Sellers
+// @Tags Producto
+// @Accept json
+// @Produce  json
+// @Success 200 {object} product.ProductTopResponse "ok"
+// @Router /products/bestSellers [get]
 func makeBestSellerEndpoint(s Service) endpoint.Endpoint {
 	getBestSellersEndpoint := func(ctx context.Context, request interface{}) (interface{}, error) {
 		result, err := s.GetBestSellers()
